--- a/documentation/index.html
+++ b/documentation/index.html
@@ -38,6 +38,53 @@
 <p>Run <code>ng build</code> to build the project. The build artifacts will be stored in the <code>dist/</code> directory. Use the <code>--prod</code> flag for a production build.</p>
 <h2 id="running-unit-tests">Running unit tests</h2>
 <p>Run <code>ng test</code> to execute the unit tests via <a href="https://karma-runner.github.io">Karma</a>.</p>
+<h2 id="features-and-functionalities">Features and functionalities</h2>
+<p>This project was created from scratch (as you can see in the commit history), and include all features and functionalities explained in the seven labs and Openanthon day.</p>
+<h2 id="additional-features">Additional features</h2>
+<ul>
+<li><strong>Angular 8</strong>: Project was generated from scratch using Angular 8.0.3.</li>
+<li><strong>Reactive Foms</strong>: In all forms. Error messages are generated dynamically.</li>
+<li><strong>Animations</strong>: Event list is shown with a side animation.</li>
+<li><strong>Redesign</strong>: A little bit changes in CSS, HTML and resources. All new images are free to use and was downloaded from <a href="https://pixabay.com/es/images/search/aurora%20boreal/?colors=green">pixabay.com</a>
+//TODO add image 1</li>
+<li><strong>UX Inproved</strong>: A little bit changes to inprove the UX.<ul>
+<li>Do not show &quot;Profile&quot; option when user is not logged.</li>
+<li>Only owner can see the &quot;Delete&quot; and &quot;Edit&quot; buttons for a event.</li>
+<li>Include the &quot;Logout&quot; button in the profile detail.</li>
+<li>&quot;Profile&quot; option was renamed to user ID.</li>
+</ul>
+</li>
+<li><strong>Lazy Loading</strong>: Added lazy loading to some modules for a better performance.
+//TODO add image 2</li>
+<li><strong>Unit Test</strong>: Added 60 Unit Test to cover 100% of code.
+//TODO ad image 2.5 y 2.6</li>
+<li><strong>Zero vulnerabilities</strong>: Project was audit with &#39;npm audit&#39; and SonarQube. No vulnerabilities was detected in distribution environment. There is a known vulnerability in compodoc that is not solvable at the moment, but it is acceptable because it is only used to generate documentation and therefore does not jeopardize the production environment.  </li>
+<li><strong>Code Comments</strong>: More code comments was added for cover more than 11% (audited with a SonarQube rule).</li>
+<li><strong>Compodoc</strong>: Compodoc was included. Project documentation can be generated running &quot;npm compodoc&quot; command.
+//TODO add image 3</li>
+<li><strong>Bundle Report</strong>: Generated to analyze bundle size for optimization. Bundle Report can be generated running &quot;npm bundle-analyzer&quot; command.
+//TODO add image 4</li>
+<li><strong>Zero TSLint problems</strong>: No file with errors after running &#39;ng lint&#39;</li>
+<li><strong>SonarQube analisys</strong>:<ul>
+<li>0 bugs</li>
+<li>0 vulnerabilities (</li>
+<li>0 code smells</li>
+<li>0% duplicate code</li>
+<li>100% Conditional Coverage</li>
+<li>100% Line Coverage</li>
+<li>0 Ciclomatic complexity issues</li>
+<li>0 Cognitive complexity issues
+//TODO add image 5</li>
+</ul>
+</li>
+</ul>
+<h2 id="exaple-data">Exaple data</h2>
+<p>The db.json file is located in project root directory and include example data to run the project.</p>
+<h2 id="credits">Credits</h2>
+<ul>
+<li>Efisio Pitzalis Morillas</li>
+<li>Francisco Toro Mateo</li>
+</ul>
 
 
 
